deplyment.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: ${application_name}
  labels:
    app: ${application_name}
    environment: ${environment_name}
spec:
  replicas: ${deployment.replicas_number}
  selector:
  strategy:
  template:
    metadata:
      labels:
        app: ${application_name}
        deploymentConfig: ${application_name}
        environment: ${environment_name}
    spec:
      containers:
        -env:
          - name: ${variable_name}
            value: ${variable_value}
          - name: POD_NAME
            valueFrom:
              fieldRef:
                apiVersion: v1
                fieldPath: metadata.name
        image: ${application_name}:latest
        name: ${application_name}
        resources:
          limits:
           cpu: ${cpu_limit_value}
           memory: ${memory_limit_value}
          requests:
            cpu: ${cpu_request_value}
            memory: ${memory_request_value}
        volumeMounts:
          - mountPath: /mnt/client-cert
            name: ${application_name}-client-cert
            readOnly: true
          - mountPath: /mnt/server-cert
            name: ${application_name}-server-cert
            readOnly: true
          - mountPath: /mnt/trust-store
            name: ${application_name}-trust-store
            readOnly: true
      volumes:
        - name: ${application_name}-client-cert
          secret:
            defaultMode: 420
            secretName: ${application_name}-client-cert
        - name: ${application_name}-server-cert
          secret:
            defaultMode: 420
            secretName: ${application_name}-server-cert
        - name: ${application_name}-trust-store
          secret:
            defaultMode: 420
            secretName: ${application_name}-trust-store
        - name: ${application_name}-storage
          persistentVolumeClaim:
            claimName: ${application_name}-storage
  test: false
  triggers:
    - imageChangeParms:
        automatic: true
        containerNames:
          - ${application_name}
        from:
          kind: ImageStreamTag
          name: ${application_name}:latest
      type: ImageChange
    - type: ConfigChange
