route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ${application_name}-route
  labels:
    app: ${application_name}
    environment: ${environment_name}
spec:
  host: ${route_host_name}
  port:
    targetPort: ${route.target_port}
  tls:
    termination: passthrough
  to:
    kind: Service
    name: ${application_name}
  wildcardPolicy: None
